[project]
name = "renovate-reproduction-ssh-git-deps"
version = "0.1.0"
description = "MRE for renovate SSH git deps issue"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # "httpx",
    "requests",
    "urllib3",
    "httplib2",
    "aiohttp==3.12.0",
]

[tool.uv.sources]
# httpx = { git = "ssh://git@github.com/encode/httpx", tag = "0.28.0" }
requests = { git = "https://github.com/psf/requests", tag = "v2.32.0" }
urllib3 = { git = "ssh://git@github.com/urllib3/urllib3", rev = "2.4.0" }
httplib2 = { git = "https://github.com/httplib2/httplib2", rev = "v0.21.0" }