[project]
name = "renovate-reproduction-ssh-git-deps"
version = "0.1.0"
description = "MRE for renovate SSH git deps issue"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "requests",
    "urllib3",
    "httplib2",
    "aiohttp==3.12.15",
]

[tool.uv.sources]
httpx = { git = "ssh://git@github.com/encode/httpx", tag = "0.28.1" }  # <-- this one breaks renovate
requests = { git = "https://github.com/psf/requests", tag = "v2.32.4" }
urllib3 = { git = "ssh://git@github.com/urllib3/urllib3", rev = "6e0e96c76fedec21a7189342f59cd39a1d8e7086" }
httplib2 = { git = "https://github.com/httplib2/httplib2", rev = "1a6ff781792099e9e14d7beb610bd99112b17b07" }